Fixed scrollbar for landing page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
     max-width: 100%;
     user-select: none;
     overflow-x: hidden;
+    --scrollbarBG: #000000;
+    --thumbBG: #343a40;
 }
 
 :root {
@@ -23,12 +25,23 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    overflow: auto;
 }
 
-:root::-webkit-scrollbar {
-    display: none;
+body {
+    scrollbar-width: auto;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG);
+    border-radius: 6px;
+    border: 3px solid var(--scrollbarBG);
+}
+
+body::-webkit-scrollbar {
+    width: 10px;
 }
